[tool.black]
line-length = 110
target-version = ["py39"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = false
use_parentheses = true
line_length = 110

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict = true

[tool.poetry]
name = "c2cciutils"
version = "0.0.0"
description = "Common utilities for Camptocamp CI"
readme = "README.md"
authors = ["Camptocamp <info@camptocamp.com>"]
keywords = ["ci"]
repository = "https://github.com/camptocamp/c2cciutils"
license = "FreeBSD"
packages = [{ include = "c2cciutils" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]
include = [
    "c2cciutils/py.typed",
    "c2cciutils/*.graphql",
    "c2cciutils/*.yaml",
    "c2cciutils/*.json",
]
exclude = ["c2cciutils/node_modules/**/test"]

[tool.poetry.scripts]
c2cciutils = "c2cciutils.scripts.main:main"
c2cciutils-env = "c2cciutils.scripts.env:main"
c2cciutils-publish = "c2cciutils.scripts.publish:main"
c2cciutils-version = "c2cciutils.scripts.version:main"
c2cciutils-clean = "c2cciutils.scripts.clean:main"
c2cciutils-checks = "c2cciutils.scripts.env:main"
c2cciutils-k8s-install = "c2cciutils.scripts.k8s.install:main"
c2cciutils-k8s-db = "c2cciutils.scripts.k8s.db:main"
c2cciutils-k8s-wait = "c2cciutils.scripts.k8s.wait:main"
c2cciutils-k8s-logs = "c2cciutils.scripts.k8s.logs:main"
c2cciutils-pin-pipenv = "c2cciutils.scripts.pin_pipenv:main"
c2cciutils-docker-logs = "c2cciutils.scripts.docker_logs:main"
c2cciutils-trigger-image-update = "c2cciutils.scripts.trigger_image_update:main"
c2cciutils-download-applications = "c2cciutils.scripts.download_applications:main"
c2cciutils-docker-versions-gen = "c2cciutils.scripts.docker_versions_gen:main"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = "2.32.5"
"ruamel.yaml" = "0.18.17"
defusedxml = "0.7.1"
twine = { version = "5.1.1", optional = true }
debian-inspector = "31.1.1"
PyYAML = "6.0.3"
multi-repo-automation = { version="1.3.0", optional = true }
security-md = "0.2.3"
id = { version="1.4.0", optional = true }

[tool.poetry.extras]
audit = []
checks = []
publish = ["twine", "google-api-python-client", "google-auth-httplib2", "google-auth-oauthlib", "id"]
publish_plugins = []
pr_checks = []
version = ["multi-repo-automation"]

[tool.poetry.group.dev.dependencies]
prospector = { version = "1.12.1", extras = ["with-bandit", "with-mypy", "with-pyroma"] }
prospector-profile-duplicated = "1.6.0"
prospector-profile-utils = "1.9.1"
types-requests = "2.32.0.20250328"
types-pyyaml = "6.0.12.20250402"
types-markdown = "3.7.0.20250322"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "poetry-dynamic-versioning[plugin]>=0.19.0",
    "poetry-plugin-tweak-dependencies-version",
    "poetry-dynamic-versioning",
    # "poetry-plugin-drop-python-upper-constraint",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^(?P<base>\\d+(\\.\\d+)*)"
format-jinja = """
{%- if env.get("VERSION_TYPE") == "version_branch" -%}
{{serialize_pep440(bump_version(base, 1 if env.get("IS_MASTER") == "TRUE" else 2), dev=distance)}}
{%- elif distance == 0 -%}
{{serialize_pep440(base)}}
{%- else -%}
{{serialize_pep440(bump_version(base), dev=distance)}}
{%- endif -%}
"""

[tool.poetry-plugin-tweak-dependencies-version]
default = "major"
codespell = "full"
cryptography = "present"
certifi = "present"
security-md = "<=2"
